--- a/Coffee shop website/index.html
+++ b/Coffee shop website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee Website</title>
+    <title>Only Love Cafe</title>
     <!-- link for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <!-- link for sliding image -->
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <a href="#" class="nav-logo">
-                <h2 class="logo-text">☕ Coffee</h2>
+                <h2 class="logo-text">☕ Only Love</h2>
             </a>
             <ul class="nav-menu">
 
